fix: add java.xml.bind via jvm-opts