@@ -27,6 +27,8 @@
 
   :aot [sixsq.nuvla.server.ring]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+  
   :dependencies
   [[aleph]
    [environ]
